<resources>
    <string name="app_name">FarsNews</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_chosen_news">اخبار فارس</string>
    <string name="text_political_news">خبرهای سیاسی</string>
    <string name="text_economic_news">خبرهای اقتصادی</string>
    <string name="text_sport_news">خبرهای ورزشی</string>
    <string name="text_social_news">خبرهای اجتماعی</string>
    <string name="text_cultural_news">خبرهای علمی فرهنگی</string>
    <string name="title_splash_fars">FARS</string>
    <string name="title_splash_24">24</string>
    <string name="text_for_copy">متن خبر مورد نظر کپی شد</string>
    <string name="title_splash_news_24">اخبار فارس در 24 ساعت گذشته</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">جستجو</string>
    <string name="title_copy_right">ساخته شده توسط تیم دانش بنیان ویستا</string>
    <string name="title_vesta">VestaTeam.net</string>
    <string name="title_version">نسخه 1.0.0</string>
</resources>