<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#C5C2C2"
    android:layout_width="match_parent"
    android:layout_height="192dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_fars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/font_en_three"
        android:gravity="center"
        android:text="@string/title_splash_fars"
        android:textColor="#800D04"
        android:textSize="81sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/font_en_three"
        android:gravity="center"
        android:text="@string/title_splash_24"
        android:textColor="#0C0B0B"
        android:textSize="81sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fars"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/tv_fars" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_news_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_fa_one"
        android:gravity="center"
        android:text="@string/title_splash_news_24"
        android:textColor="#373636"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_24"
        app:layout_constraintStart_toStartOf="@+id/tv_fars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.61" />

</androidx.constraintlayout.widget.ConstraintLayout>