<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="?attr/actionBarSize">


            <fragment
                android:id="@+id/nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:navGraph="@navigation/mobile_navigation"
                tools:layout_editor_absoluteY="56dp" />



        </androidx.constraintlayout.widget.ConstraintLayout>
        <include
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            layout="@layout/app_bar_layout"
            />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/navigationview_header"
            android:background="#9C9998"
            app:menu="@menu/menu" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/footer_item_1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="@string/title_copy_right" />
                <TextView
                    android:id="@+id/footer_item_2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="@string/title_version" />
                <TextView
                    android:id="@+id/footer_item_3"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="@string/title_vesta" />
            </LinearLayout>

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>