<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

<!--    <TextView-->
<!--        android:id="@+id/text_home"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:text="result:"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_chosen_news"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_all_home_cv"
        android:layout_marginTop="@dimen/margin_all_home_cv"
        android:layout_marginEnd="@dimen/margin_all_home_cv"
        android:layout_marginBottom="@dimen/margin_all_home_cv"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="@dimen/corner_radius_cv_home"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_chosen_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="#2196F3"
            android:orientation="vertical">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_cv_chosen_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/font_fa_one"
                android:text="@string/text_chosen_news"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_home_cv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7518248" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7518248" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_home_political"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_all_home_cv"
        android:layout_marginBottom="@dimen/margin_all_home_cv"
        android:layout_marginStart="@dimen/margin_all_home_cv"
        app:cardCornerRadius="@dimen/corner_radius_cv_home"
        app:cardPreventCornerOverlap="false"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content_political"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF9800"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_cv_political_news"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="right"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/font_fa_one"
                android:text="@string/text_political_news"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_home_cv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_home_economic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_all_home_cv"
        android:layout_marginEnd="@dimen/margin_all_home_cv"
        app:cardCornerRadius="@dimen/corner_radius_cv_home"
        app:cardPreventCornerOverlap="false"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content_economic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#673AB7">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_cv_economic_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/font_fa_one"
                android:text="@string/text_economic_news"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_home_cv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <!--        <com.google.android.material.textview.MaterialTextView-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_below="@+id/txt_cv_condolences_home"-->
            <!--            android:layout_alignParentEnd="true"-->
            <!--            android:layout_marginEnd="4dp"-->
            <!--            android:fontFamily="@font/font_fa_one"-->
            <!--            android:text="420 پیامک"-->
            <!--            android:textColor="#9EFFFFFF"-->
            <!--            android:textSize="15sp"-->
            <!--            app:layout_constraintBottom_toBottomOf="parent"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintHorizontal_bias="1.0"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/txt_cv_condolences_home"-->
            <!--            app:layout_constraintVertical_bias="0.0" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_home_sport"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_all_home_cv"
        android:layout_marginEnd="@dimen/margin_all_home_cv"
        android:layout_marginBottom="@dimen/margin_all_home_cv"
        app:cardCornerRadius="@dimen/corner_radius_cv_home"
        app:cardPreventCornerOverlap="false"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content_sport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F44336"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_cv_sport_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/font_fa_one"
                android:text="@string/text_sport_news"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_home_cv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_home_social"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_all_home_cv"
        app:cardCornerRadius="@dimen/corner_radius_cv_home"
        app:cardPreventCornerOverlap="false"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content_inspiring"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8BC34A">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_cv_social_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/font_fa_one"
                android:text="@string/text_social_news"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_home_cv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_home_cultural"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_all_home_cv"
        app:cardCornerRadius="@dimen/corner_radius_cv_home"
        app:cardPreventCornerOverlap="false"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline5">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content_ecosystem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#009688">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_cv_cultural_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/font_fa_one"
                android:text="@string/text_cultural_news"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_home_cv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!--            <com.google.android.material.textview.MaterialTextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@+id/txt_cv_ecosystem_home"-->
            <!--                android:layout_alignParentEnd="true"-->
            <!--                android:layout_marginEnd="4dp"-->
            <!--                android:fontFamily="@font/font_fa_one"-->
            <!--                android:text="320 پیامک"-->
            <!--                android:textColor="#9EFFFFFF"-->
            <!--                android:textSize="15sp"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintHorizontal_bias="1.0"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/txt_cv_ecosystem_home"-->
            <!--                app:layout_constraintVertical_bias="0.0" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>